--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
     "@angular/router": "4.0.0",
+    "angular2-moment": "^1.3.3",
     "moment": "^2.18.1",
     "nativescript-angular": "~1.5.0",
     "nativescript-telerik-ui": "^1.6.2",
