--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   },
   "dependencies": {
+    "@angular/animations": "4.0.0",
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
     "@angular/core": "4.0.0",
@@ -19,33 +20,32 @@
     "@angular/platform-browser-dynamic": "4.0.0",
     "@angular/router": "4.0.0",
     "angular2-moment": "^1.3.3",
-    "moment": "^2.18.1",
-    "nativescript-angular": "~1.5.0",
-    "nativescript-telerik-ui": "^1.6.2",
+    "nativescript-angular": "rc",
+    "nativescript-telerik-ui": "^1.7.0-2017.4.4.1",
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.2.0",
-    "tns-core-modules": "^2.5.2",
-    "zone.js": "~0.8.5"
+    "tns-core-modules": "rc",
+    "zone.js": "~0.8.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~4.0.0",
-    "@ngtools/webpack": "1.2.13",
+    "@angular/compiler-cli": "4.0.0",
+    "@ngtools/webpack": "1.3.1",
     "babel-traverse": "6.24.1",
     "babel-types": "6.24.1",
-    "babylon": "6.16.1",
-    "copy-webpack-plugin": "~3.0.1",
-    "extract-text-webpack-plugin": "~2.0.0-beta.4",
+    "babylon": "6.17.0",
+    "copy-webpack-plugin": "~4.0.1",
+    "extract-text-webpack-plugin": "~2.1.0",
     "lazy": "1.0.11",
     "nativescript-css-loader": "~0.26.0",
     "nativescript-dev-android-snapshot": "^0.*.*",
-    "nativescript-dev-typescript": "^0.3.5",
-    "nativescript-dev-webpack": "^0.3.7",
+    "nativescript-dev-typescript": "~0.4.0",
+    "nativescript-dev-webpack": "^0.4.1",
     "raw-loader": "~0.5.1",
-    "resolve-url-loader": "~1.6.0",
-    "typescript": "~2.1.0",
-    "webpack": "2.2.0",
-    "webpack-sources": "~0.1.3"
+    "resolve-url-loader": "~2.0.2",
+    "typescript": "~2.2.1",
+    "webpack": "~2.4.1",
+    "webpack-sources": "~0.2.3"
   },
   "scripts": {
     "ns-bundle": "ns-bundle",
