--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -1,5 +1,5 @@
 {
-  "extend": "./tsconfig",
+  "extends": "./tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
@@ -28,6 +28,10 @@
       "globals": ["node_modules/tns-core-modules/globals"]
     }
   },
+  "exclude": [
+    "node_modules",
+    "platforms"
+  ],
   "angularCompilerOptions": {
     "skipMetadataEmit": true,
     "genDir": "./"
