--- a/package.json
+++ b/package.json
@@ -6,30 +6,29 @@
   "nativescript": {
     "id": "org.nativescript.Astir",
     "tns-android": {
-      "version": "2.5.0"
+      "version": "3.0.0"
     }
   },
   "dependencies": {
-    "@angular/animations": "4.0.0",
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@angular/router": "4.0.0",
+    "@angular/animations": "~4.1.0",
+    "@angular/common": "~4.1.0",
+    "@angular/compiler": "~4.1.0",
+    "@angular/core": "~4.1.0",
+    "@angular/forms": "~4.1.0",
+    "@angular/http": "~4.1.0",
+    "@angular/platform-browser": "~4.1.0",
+    "@angular/router": "~4.1.0",
     "angular2-moment": "^1.3.3",
-    "nativescript-angular": "rc",
-    "nativescript-telerik-ui": "^1.7.0-2017.4.4.1",
+    "nativescript-angular": "~3.0.0",
+    "nativescript-telerik-ui": "^2.0.1",
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
-    "rxjs": "~5.2.0",
-    "tns-core-modules": "rc",
+    "rxjs": "~5.3.0",
+    "tns-core-modules": "~3.0.0",
     "zone.js": "~0.8.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.0.0",
+    "@angular/compiler-cli": "~4.1.0",
     "@ngtools/webpack": "1.3.1",
     "babel-traverse": "6.24.1",
     "babel-types": "6.24.1",
@@ -38,12 +37,11 @@
     "extract-text-webpack-plugin": "~2.1.0",
     "lazy": "1.0.11",
     "nativescript-css-loader": "~0.26.0",
-    "nativescript-dev-android-snapshot": "^0.*.*",
     "nativescript-dev-typescript": "~0.4.0",
-    "nativescript-dev-webpack": "^0.4.1",
+    "nativescript-dev-webpack": "^0.4.2",
     "raw-loader": "~0.5.1",
     "resolve-url-loader": "~2.0.2",
-    "typescript": "~2.2.1",
+    "typescript": "^2.3.2",
     "webpack": "~2.4.1",
     "webpack-sources": "~0.2.3"
   },
