--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~4.1.0",
     "angular2-moment": "^1.3.3",
     "nativescript-angular": "~3.0.0",
+    "nativescript-calendar": "^1.2.2",
     "nativescript-telerik-ui": "^2.0.1",
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
