--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular2-moment": "^1.3.3",
     "nativescript-angular": "~3.0.0",
     "nativescript-calendar": "^1.2.2",
+    "nativescript-directions": "^1.0.5",
     "nativescript-telerik-ui": "^2.0.1",
     "nativescript-theme-core": "~1.0.2",
     "reflect-metadata": "~0.1.8",
